--- a/WEB_TiengAnh/views/admin/pages/dashboard.pug
+++ b/WEB_TiengAnh/views/admin/pages/dashboard.pug
@@ -267,6 +267,10 @@ html(lang="en")
                     a.dropdown-item(href='/admin/questions/create') Reading
                   li
                     a.dropdown-item(href='/admin/listening/create') Listening
+                  li
+                    a.dropdown-item(href='/admin/speaking/create') Speaking
+                  li
+                    a.dropdown-item(href='/admin/toeic-writing/create') Writing
               li.nav-item.dropdown
                 a.nav-link.dropdown-toggle(href='#', data-bs-toggle='dropdown', aria-expanded='false')
                   i.fas.fa-book.me-2
