--- a/WEB_TiengAnh/views/admin/pages/TOEIC/speaking-list.pug
+++ b/WEB_TiengAnh/views/admin/pages/TOEIC/speaking-list.pug
@@ -2,7 +2,7 @@ extends ../../layouts/default
 block content
   .container.my-5
     h1.text-center.mb-4 Danh sách đề Speaking
-    a.btn.btn-success.mb-3(href="/admin/speaking/create") Tạo đề mới +
+
     .table-responsive
       table#speechTable.table.table-striped.table-bordered
         thead
@@ -18,3 +18,6 @@ block content
               td
                 form(action=`/admin/speaking/delete/${speech._id}`, method="POST", style="display:inline;")
                   button.btn.btn-danger.btn-sm(type="submit") Xóa
+    div(style="display: flex; gap: 8px;")
+      a.btn.btn-success.mb-3(href="/admin/speaking/create") Tạo đề mới +
+      a.btn.btn-secondary.mb-3(href='/admin/dashboard') Quay lại
